install exec-path, ruby: rbenv, inf-ruby, gist setting for github gist

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@ auto-save-list/
 .last-package-update-day
 org-roam.db
 init.el
-
+.DS_Store
+quicklisp/
+var/
 ### Emacs ###
 # -*- mode: gitignore; -*-
 *~
